# calculator

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.h  images.qrc  main.cpp
builder/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qt_widgets_playground.cbp  qt_widgets_playground.ilk  rules.ninja
builder/debug/qt_widgets_playground_autogen/: mocs_compilation.cpp
builder/debug/qt_widgets_playground_autogen/EWIEGA46WW/: moc_Calculator.cpp  moc_mainwindow.cpp  qrc_images.cpp
